adds navigation, home page tweaks, and replaces font awesome

--- a/layouts/blog/summary.html
+++ b/layouts/blog/summary.html
@@ -5,5 +5,5 @@
     </h4>
     <hr>
     <p>{{ .Summary }}</p>
-    <a class="btn btn-primary btn-xs" href="{{ .Permalink }}">Read More <span class="fa fa-angle-double-right"></span></a>
+    <a class="btn btn-primary btn-xs" href="{{ .Permalink }}">Read More <span class="icon-forward"></span></a>
 </div>
