--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-7">
       <div class="blog-nav-con-upper">
-        <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
+        <a href="/blog"><i class="icon-back"></i> Back to Blog</a>
       </div>
       <div class="page-header">
         <h1>{{ .Title }}</h1>
@@ -14,7 +14,7 @@
     <div class="col-md-9">
       {{ .Content }}
       <hr>
-      <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
+      <a href="/blog"><i class="icon-back"></i> Back to Blog</a>
     </div>
     <div class="col-md-3">
       <dl class="blog-entry-meta">
