--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-md-7">
           <div class="blog-nav-con-upper">
-            <a href="/blog"><i class="fa fa-backward"></i> Back to Blog</a>
+            <a href="/blog"><i class="icon-back"></i> Back to Blog</a>
           </div>
           <div class="page-header">
             <h1>{{ .Title }}</h1>
