Adjusted some user logos for the quotes section

--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -91,7 +91,7 @@
         <div class="quote-con">
           <div class="quote-inner">
             <p class="lead">"NATS enabled us to build the fastest and most scalable webRTC signaling system we’ve come across, without adding complexity due to the very simple configuration.""</p>
-            <a class="quote-logo" href="http://www.greta.io/" target="_blank"><img src="/img/user_logos/Gretascript logo.png" alt="Gretascript"></a>
+            <a class="quote-logo" href="http://www.greta.io/" target="_blank"><img src="/img/user_logos/gretascript.png" alt="Gretascript"></a>
             <p><strong>&mdash;Dennis Mårtensson - Founder and CTO, Gretascript</strong></p>
           </div>
         </div>
@@ -100,7 +100,7 @@
         <div class="quote-con">
           <div class="quote-inner">
             <p class="lead">"At Sendify, the reliability, flexibility and ease-of-use of NATS enables us to focus more of our efforts on improving our service, and less time wrestling with wiring behind the scenes.""</p>
-            <a class="quote-logo" href="https://sendify.se/" target="_blank"><img src="/img/user_logos/sendify-white-bg.png" alt="Sendify"></a>
+            <a class="quote-logo" href="https://sendify.se/" target="_blank"><img src="/img/user_logos/sendify.png" alt="Sendify"></a>
             <p><strong>&mdash;Donal Byrne - Fullstack Developer, Sendify</strong></p>
           </div>
         </div>
