--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,11 @@
 
     <link rel="shortcut icon" href="/img/favicon.ico">
 
-    <title>{{if eq .Title ""}}{{.Site.Title}}{{else}}{{ .Title }}{{end}}</title>
+    <title>{{if eq .Title ""}}
+    {{.Site.Title}}
+    {{else}}
+        {{ .Title }} {{ .Description }}
+{{end}}</title>
 
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
