--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -1,70 +1,91 @@
 {{ partial "header.html" . }}
 <div id="main-con" class="container">
   <div class="row">
-    <div class="col-md-12">
-      {{ .Content }}
+    {{ if ne .RelPermalink "/download/" }}
+    <div id="left-nav-con" class="col-md-3 hidden-xs hidden-sm">
+      {{ partial "side-menu-downloads.html" . }}
     </div>
-  </div>
-  <div class="row download-server-con">
-    <div class="col-md-12">
-      <h2>Server</h2>
+    {{ end }}
+    <div class="{{ if eq .RelPermalink "/download/" }}col-md-9{{ else }}col-md-12{{ end }}">
+      {{ if eq .RelPermalink "/download/" }}
       {{ range $.Site.Data }}
-        {{ range .Releases }}
-        {{ if eq .type "server" }}
-
-        <div class="panel panel-default">
-          <div class="panel-body download-server">
-
-            <div class="row">
-              <div class="col-md-3 title-con">
-                <h3>{{ .name }}</h3>
-                {{ if .supported }}<p class="supported">Supported by <img src="/img/logo-sm.png" alt="Apcera" /></p>{{ end }}
-              </div>
-              <div class="col-md-6 release-con">
-                {{ if .release_notes }}
-                <h4>Release Notes:</h4>
-                {{ .release_notes | safeHTML }}
-                {{ else }}
-                <p>No release notes.</p>
+      <div class="row download-server-con">
+        <div class="col-md-12">
+          <article class="table">
+            <h2>Server</h2>
+            {{ range .Releases }}
+            {{ if eq .type "server" }}
+            <section class="table-cell">
+              <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
+              <figure class="something-semantic">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
                 {{ end }}
-              </div>
-              <div class="col-md-3 download-con">
-                <ul class="list-unstyled">
-                  {{ range first 1 .github }}
-                  <li><a href="{{ .link }}" target="_blank">View on Github</a></li>
-                  <li><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></li>
-                  {{ end }}
-                  {{ range .links }}
-                  <li><a href="{{ .url }}">{{ .name }}</a></li>
-                  {{ end }}
-                </ul>
-              </div>
-            </div>
-
-          </div>
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article>
         </div>
+      </div>
 
-        {{ end }}
-        {{ end }}
+      <div class="row download-clients-con">
+        <div class="col-md-12">
+          <article class="table">
+            <h2>Apcera Supported Clients</h2>
+            {{ range .Releases }}
+            {{ if and ( ne .name "NATS Server" ) ( .supported ) }}
+            <section class="table-cell">
+              <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
+              <figure class="something-semantic">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
+                {{ end }}
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article>
+        </div>
+      </div>
+
+      <div class="row download-clients-con">
+        <div class="col-md-12">
+          <article class="table">
+            <h2>Community Clients</h2>
+            {{ range .Releases }}
+            {{ if and ( ne .name "NATS Server" ) ( eq .supported false ) }}
+            <section class="table-cell">
+              <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
+              <figure class="something-semantic">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
+                {{ end }}
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article>
+        </div>
+      </div>
+
       {{ end }}
+      {{ else }}
 
+      {{ .Content }}
+
+      
+
+      {{ end }}
     </div>
   </div>
-
-  <div class="row download-clients-con">
-    <div class="col-md-12">
-      <h2>Clients</h2>
-      {{ range $.Site.Data }}
-         {{ partial "releases.html" . }}
-      {{ end }}
-    </div>
-  </div>
-
   <div class="row external-clients-con">
     <div class="col-md-12">
       <p><em>Please <a href="mailto:info@nats.io?subject=NATS External Client">contact us</a> to add your external client to the download list.</em></p>
     </div>
   </div>
-
 </div>
 {{ partial "footer.html" . }}
