--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -50,6 +50,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
     <script src="/js/index.js"></script>
 
+    <!-- Github Buttons -->
+    <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
