styling for landing

--- a/layouts/download/single2.html
+++ b/layouts/download/single2.html
@@ -8,15 +8,14 @@
 
   {{ range $.Site.Data }}
 
-  <div class="row download-server-con">
-    <div class="col-md-12">
-      <article class="table">
+  <div class="download-server-con col-md-12">
+      <article class="nats--downloads">
         <h2>Server</h2>
         {{ range .Releases }}
         {{ if eq .type "server" }}
-        <section class="table-cell">
+        <section class="download--item">
           <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
-          <figure class="something-semantic">
+          <figure class="download-item--links">
             {{ range first 1 .github }}
             <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
             <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
@@ -26,18 +25,16 @@
         {{ end }}
         {{ end }}
       </article>
-    </div>
   </div>
 
-  <div class="row download-clients-con">
-    <div class="col-md-12">
-      <article class="table">
+  <div class="download-clients-con col-md-12">
+      <article class="nats--download">
         <h2>Apcera Supported Clients</h2>
         {{ range .Releases }}
         {{ if and ( ne .name "NATS Server" ) ( .supported ) }}
-        <section class="table-cell">
+        <section class="download--item">
           <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
-          <figure class="something-semantic">
+          <figure class="download-item--links">
             {{ range first 1 .github }}
             <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
             <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
@@ -47,18 +44,16 @@
         {{ end }}
         {{ end }}
       </article>
-    </div>
   </div>
 
-  <div class="row download-clients-con">
-    <div class="col-md-12">
-      <article class="table">
+  <div class="download-clients-con col-md-12">
+      <article class="nats--download">
         <h2>Community Clients</h2>
         {{ range .Releases }}
         {{ if and ( ne .name "NATS Server" ) ( eq .supported false ) }}
-        <section class="table-cell">
+        <section class="download--item">
           <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
-          <figure class="something-semantic">
+          <figure class="download-item--links">
             {{ range first 1 .github }}
             <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
             <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
@@ -68,15 +63,12 @@
         {{ end }}
         {{ end }}
       </article>
-    </div>
   </div>
 
   {{ end }}
 
-  <div class="row external-clients-con">
-    <div class="col-md-12">
+  <div class="external-clients-con col-md-12">
       <p><em>Please <a href="mailto:info@nats.io?subject=NATS External Client">contact us</a> to add your external client to the download list.</em></p>
-    </div>
   </div>
 
 </div>
