--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7457,5 +7457,40 @@ footer#home-page-footer .social .icon-mark-github {
     text-align: center;
   }
 }
+.nats--downloads {
+  margin-bottom: 20px;
+}
+.download-item--links {
+  margin: 20px 0;
+}
+.download--item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  padding: 0 10px;
+}
+.download--item h3 {
+  margin: 20px 0;
+}
+.download--item:nth-child(even) {
+  background: #f8f9fb;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
+.download--item span + span {
+  margin-left: 15px;
+}
 
 /*# sourceMappingURL=styles.css.map */
