--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -121,10 +121,9 @@
 
       {{ end }}
   </div>
-  <div class="row external-clients-con">
-    <div class="col-md-12">
+  <div class="external-clients-con col-md-12">
       <p><em>Please <a href="mailto:info@nats.io?subject=NATS External Client">contact us</a> to add your external client to the download list.</em></p>
-    </div>
   </div>
+</div>
 </div>
 {{ partial "footer.html" . }}
