--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7254,9 +7254,6 @@ html#home-html {
     height: 325px;
   }
 }
-#download-page #left-nav-con {
-  padding-top: 40px;
-}
 #download-page #left-nav-con ul.sub-menu li.main-menu-item {
   margin-bottom: 15px;
 }
@@ -7491,6 +7488,37 @@ footer#home-page-footer .social .icon-mark-github {
 }
 .download--item span + span {
   margin-left: 15px;
+}
+.download--header {
+  height: 200px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 1199px) {
+  .download--header {
+    height: 100px;
+  }
+}
+.download-details--headline {
+  margin-top: 0;
+}
+.download-details--wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+.download--details {
+  margin-right: 50px;
 }
 
 /*# sourceMappingURL=styles.css.map */
