--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="{{ .Description }}">
+    <meta name="description" content="{{if eq .Description ""}}{{.Site.Params.desription}}{{else}}{{ .Description }}{{end}}">
     <meta name="author" content="{{ .Site.Params.author }}">
     <meta name="generator" content="Hugo 0.13">
-
     <link rel="shortcut icon" href="/img/favicon.ico">
 
-    <title>{{ .Title }}</title>
+    <title>{{if eq .Title ""}}{{.Site.Title}}{{else}}{{ .Title }}{{end}}</title>
 
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
