--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7329,6 +7329,7 @@ html#home-html {
   text-align: center;
   font-size: 22px;
   margin-bottom: 25px;
+  margin-top: 25px;
 }
 #support-page table#support-table thead {
   background: #2e3957;
