--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -2,8 +2,8 @@
 {{ $.Scratch.Set "pageRelUrl" .RelPermalink }}
 {{ partial "header.html" . }}
 <div id="main-con" class="container">
-  <div class="download--header">
-    <h1>Downloads</h1>
+  <div class="page-header">
+    <h1>Download</h1>
   </div>
   <div class="row">
     {{ if ne .RelPermalink "/download/" }}
