--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -55,8 +55,8 @@
         <div class="quote-con">
           <div class="quote-inner">
             <p class="lead">"We chose NATS over other messaging platforms because it is as easy to deploy as it is to use, giving freedom to the developer to build a platform without limitations or hidden assumptions."</p>
-            <a class="quote-logo" href="http://carrenza.com" target="_blank"><img src="/img/user_logos/carrenza.png" alt="Carrenza"></a>
-            <p><strong>&mdash;Raül Pérez, Senior Engineer at Carrenza</strong></p>
+            <a class="quote-logo" href="http://r3labs.io" target="_blank"><img src="/img/user_logos/r3labs.png" alt="Carrenza"></a>
+            <p><strong>&mdash;Raül Pérez, Lead Software Engineer at R3Labs</strong></p>
           </div>
         </div>
       </li>
