Alt text for the image

--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -55,7 +55,7 @@
         <div class="quote-con">
           <div class="quote-inner">
             <p class="lead">"We chose NATS over other messaging platforms because it is as easy to deploy as it is to use, giving freedom to the developer to build a platform without limitations or hidden assumptions."</p>
-            <a class="quote-logo" href="http://r3labs.io" target="_blank"><img src="/img/user_logos/r3labs.png" alt="Carrenza"></a>
+            <a class="quote-logo" href="http://r3labs.io" target="_blank"><img src="/img/user_logos/r3labs.png" alt="R3Labs"></a>
             <p><strong>&mdash;Raül Pérez, Lead Software Engineer at R3Labs</strong></p>
           </div>
         </div>
