Updated for nats connectors as well as a minor adjustment/update to the social icons in the footer

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -500,7 +500,7 @@ html#home-html {
       }
       .icon-twitter,
       .icon-google-plus,
-      .icon-mark-github{
+      .icon-github{
         vertical-align: middle;
         font-size: 30px;
       }
@@ -510,7 +510,7 @@ html#home-html {
       .icon-google-plus{
         color: @nats-brand-google;
       }
-      .icon-mark-github{
+      .icon-github{
         color: @nats-brand-github-dark;
       }
     }
@@ -809,18 +809,19 @@ footer {
       font-size: 34px;
       .icon-twitter,
       .icon-google-plus,
-      .icon-mark-github{
+      .icon-slack,
+      .icon-github{
         vertical-align: sub;
         font-size: 30px;
       }
       .icon-twitter{
-        color: @nats-brand-twitter;
+        //color: @nats-brand-twitter;
       }
       .icon-google-plus{
-        color: @nats-brand-google;
+        //color: @nats-brand-google;
       }
       .icon-mark-github{
-        color: @nats-brand-github-dark;
+        //color: @nats-brand-github-dark;
       }
       a {
         display: inline-block;
@@ -845,8 +846,8 @@ footer {
       max-width: 262.5px;
     }
     .social {
-      .icon-mark-github{
-        color: @nats-brand-github-light;
+      .icon {
+        color: #fff;
       }
     }
     @media (max-width: @screen-xs-max) {
