--- a/src/less/util/icons.less
+++ b/src/less/util/icons.less
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'nats';
-    src:    url('/fonts/nats.eot?ek0aal');
-    src:    url('/fonts/fonts/nats.eot?ek0aal#iefix') format('embedded-opentype'),
-        url('/fonts/nats.ttf?ek0aal') format('truetype'),
-        url('/fonts/nats.woff?ek0aal') format('woff'),
-        url('/fonts/nats.svg?ek0aal#nats') format('svg');
+    src:    url('/fonts/nats.eot?22bw7o');
+    src:    url('/fonts/nats.eot?22bw7o#iefix') format('embedded-opentype'),
+        url('/fonts/nats.ttf?22bw7o') format('truetype'),
+        url('/fonts/nats.woff?22bw7o') format('woff'),
+        url('/fonts/nats.svg?22bw7o#nats') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,32 +24,21 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-//back icon
-.icon-back:before {
+.icon-google-plus:before {
+    content: "\e905";
+}
+.icon-slack:before {
     content: "\e900";
 }
-
-//forward icon
-.icon-forward:before {
-    content: "\e901";
-}
-
-//full github logo
-.icon-logo-github:before {
-    content: "\f092";
-}
-
-//social github mark
-.icon-mark-github:before {
-    content: "\f00a";
-}
-
-//google plus logo
-.icon-google-plus:before {
+.icon-backward2:before {
     content: "\e902";
 }
-
-//twitter logo
-.icon-twitter:before {
+.icon-forward3:before {
     content: "\e903";
+}
+.icon-twitter:before {
+    content: "\e904";
+}
+.icon-github:before {
+    content: "\e901";
 }
