Added netlify user quote to community page

--- a/layouts/partials/quotes.html
+++ b/layouts/partials/quotes.html
@@ -13,6 +13,7 @@
       <li data-target="#quote-carousel" data-slide-to="8"></li>
       <li data-target="#quote-carousel" data-slide-to="9"></li>
       <li data-target="#quote-carousel" data-slide-to="10"></li>
+      <li data-target="#quote-carousel" data-slide-to="11"></li>
     </ol>
     <!-- Wrapper for slides -->
     <ul class="carousel-inner" role="listbox">
@@ -111,6 +112,15 @@
             <p class="lead">"We opted for NATS over other message systems due to its elegant simplicity and remarkable performance &mdash; and because NATS has an exceptional potential for scalability that matches our project's ambitions."</p>
             <a class="quote-logo" href="http://nextgenleads.com/" target="_blank"><img src="/img/user_logos/nextgenleads.png" alt="NextGen Leads"></a>
             <p><strong>&mdash;Aaron John Schlosser, Application Developer at NextGen Leads</strong></p>
+          </div>
+        </div>
+      </li>
+      <li class="item">
+        <div class="quote-con">
+          <div class="quote-inner">
+            <p class="lead">"Tedious connection code, painful maintenance, and repeated failures of other messaging systems we tried persuaded us to try something else. We chose NATS to back our real time metrics, logging and alerting infrastructure because of the simple but powerful messaging semantics, simplicity, and great throughput."</p>
+            <a class="quote-logo" href="https://www.netlify.com/" target="_blank"><img src="/img/user_logos/netlify.png" alt="Netlify"></a>
+            <p><strong>&mdash;Ryan Neal, Head of Infrastructure at Netlify</strong></p>
           </div>
         </div>
       </li>
