Updated homepage with new nats streaming copy

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -339,11 +339,12 @@ html#home-html {
       font-size: 42px;
       margin-bottom: 15px;
     }
-    .lead {
+    h2 {
       font-family: @font-family-sans-serif;
       font-weight: 200;
       font-size: 34px;
-
+      margin-bottom: 22px;
+      line-height: 1.4;
     }
     .extra-info {
       font-weight: 100;
