Working on download updates and homepage tweaks

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -17,6 +17,18 @@
 
       <div class="row">
         <div class="col-md-12">
+          <h3>Resources</h3>
+          Derek’s youtube video (already on the site)
+          Tyler Treat’s talk on NATS: https://www.youtube.com/watch?v=4GIt2JIf6So&index=14&list=PLCafzSCWOqrJhOBt8lPgd_7XpO8dm5uGF
+          Add links to a few great NATS presentations on slideshare:
+
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-12">
           <h3>Recent Posts</h3>
           {{ partial "recent-posts.html" . }}
         </div>
