--- a/layouts/partials/side-menu-downloads.html
+++ b/layouts/partials/side-menu-downloads.html
@@ -3,40 +3,34 @@
   {{ range .Site.Menus.downloads }}
 
 	<li class="main-menu-item{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }} active{{end}}">
+    <div class="panel panel-default">
+      {{ if .URL }}
+      <a class="main-menu-item-title" href="{{ .URL }}">{{.Name}}</a>
+      {{ else }}
+      <div class="panel-heading">{{ title .Name }}</div>
+      {{ end }}
+      <div class="panel-body">
 
-    {{ if .URL }}
-    <a class="main-menu-item-title" href="{{ .URL }}">{{.Name}}</a>
-    {{ else }}
-    <span class="main-menu-item-title">{{ title .Name }}</span>
-    {{ end }}
-
-
-    {{ $.Scratch.Set "CurrentMenu" . }}
-    {{ $.Scratch.Add "Breadcrumbs" (print " > <a href='" .URL  "'>" .Name "</a>" )  }}
-    {{ if .HasChildren }}
-    <ul class="list-unstyled">
-    {{ range .Children }}
-    {{ if ne .Identifier ""}}
-    <li class="{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }}active{{end}}">
-      <a href="{{.URL}}">{{ .Name }} </a>
-
-      {{ $.Scratch.Set "CurrentMenu" . }}
-   		{{ $.Scratch.Add "Breadcrumbs" (print " > <a href='" .URL  "'>" .Name "</a>" )  }}
-   		{{ if .HasChildren }}
-   	    <ul class="list-unstyled">
-   	      {{ range .Children }}
-   	      {{ if ne .Identifier ""}}
-     	    <li class="{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }}active{{end}}">
-     	      <a href="{{.URL}}">{{ .Name }}</a>
-
-            {{ $.Scratch.Set "CurrentMenu" . }}
-            {{ $.Scratch.Add "Breadcrumbs" (print " > <a href='" .URL  "'>" .Name "</a>" )  }}
-            {{ if .HasChildren }}
-            <ul class="list-unstyled">
-              {{ range .Children }}
-              {{ if ne .Identifier ""}}
-              <li class="{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }}active{{end}}">
-                <a href="{{.URL}}">{{ .Name }} </a>
+        {{ $.Scratch.Set "CurrentMenu" . }}
+        {{ $.Scratch.Add "Breadcrumbs" (print " > <a href='" .URL  "'>" .Name "</a>" )  }}
+        {{ if .HasChildren }}
+        <ul class="list-unstyled">
+        {{ range .Children }}
+        {{ if ne .Identifier ""}}
+        <li class="{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }}active{{end}}">
+          {{ if .URL }}
+          <a class="main-menu-item-title" href="{{ .URL }}">{{.Name}}</a>
+          {{ else }}
+          <span class="main-menu-item-title">{{ title .Name }}</span>
+          {{ end }}
+          {{ $.Scratch.Set "CurrentMenu" . }}
+       		{{ $.Scratch.Add "Breadcrumbs" (print " > <a href='" .URL  "'>" .Name "</a>" )  }}
+       		{{ if .HasChildren }}
+       	    <ul class="list-unstyled">
+       	      {{ range .Children }}
+       	      {{ if ne .Identifier ""}}
+         	    <li class="{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }}active{{end}}">
+         	      <a href="{{.URL}}">{{ .Name }}</a>
 
                 {{ $.Scratch.Set "CurrentMenu" . }}
                 {{ $.Scratch.Add "Breadcrumbs" (print " > <a href='" .URL  "'>" .Name "</a>" )  }}
@@ -46,30 +40,45 @@
                   {{ if ne .Identifier ""}}
                   <li class="{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }}active{{end}}">
                     <a href="{{.URL}}">{{ .Name }} </a>
+
+                    {{ $.Scratch.Set "CurrentMenu" . }}
+                    {{ $.Scratch.Add "Breadcrumbs" (print " > <a href='" .URL  "'>" .Name "</a>" )  }}
+                    {{ if .HasChildren }}
+                    <ul class="list-unstyled">
+                      {{ range .Children }}
+                      {{ if ne .Identifier ""}}
+                      <li class="{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }}active{{end}}">
+                        <a href="{{.URL}}">{{ .Name }} </a>
+                      </li>
+                      {{ end }}
+                      {{ end }}
+                    </ul>
+                    {{ end }}
+
                   </li>
                   {{ end }}
                   {{ end }}
                 </ul>
                 {{ end }}
 
-              </li>
-              {{ end }}
-              {{ end }}
+         	    </li>
+       	      {{ end }}
+       	      {{ end }}
+       	    </ul>
+            {{ else }}
+            <ul class="list-unstyled">
+              <li>Please contact us to add your external client to the download list.</li>
             </ul>
-            {{ end }}
+       	    {{ end }}
 
-     	    </li>
-   	      {{ end }}
-   	      {{ end }}
-   	    </ul>
-   	    {{ end }}
+          </li>
+          {{ end }}
+          {{ end }}
+        </ul>
+        {{ end }}
 
-      </li>
-      {{ end }}
-      {{ end }}
-    </ul>
-    {{ end }}
-
+      </div>
+    </div>
   </li>
   {{end}}
 </ul>
