--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -7,88 +7,127 @@
   </div>
   <div class="row">
     {{ if ne .RelPermalink "/download/" }}
-    <div id="left-nav-con" class="col-md-4 hidden-xs hidden-sm">
+    <div id="left-nav-con" class="col-md-3 hidden-xs hidden-sm">
       {{ partial "side-menu-downloads.html" . }}
     </div>
     {{ end }}
-    <div class="{{ if ne ($.Scratch.Get "pageRelUrl") "/download/" }}col-md-8{{ else }}col-md-12{{ end }}">
+    <div class="{{ if ne ($.Scratch.Get "pageRelUrl") "/download/" }}col-md-9{{ else }}col-md-12{{ end }}">
       {{ if eq .RelPermalink "/download/" }}
       {{ range $.Site.Data }}
-      <div class="download-server-con col-md-12">
+
+      <div class="row">
+        <div class="col-md-6">
+          <h2>NATS</h2>
           <article class="nats--downloads">
-            <h2>Server</h2>
+            <h3>Server</h3>
             {{ range .Releases }}
-            {{ if eq .type "server" }}
+            {{ if eq .type "nats-server" }}
             <section class="download--item">
-              <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
+              <h4><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h4>
               <figure class="download-item--links">
                 {{ range first 1 .github }}
                 <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
-                <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download</a></span>
                 {{ end }}
               </figure>
             </section>
             {{ end }}
             {{ end }}
           </article>
+          <hr>
+          <article class="nats--downloads">
+            <h3>Apcera Supported Clients</h3>
+            {{ range .Releases }}
+            {{ if and ( eq .type "nats-client" ) ( .supported ) }}
+            <section class="download--item">
+              <h4><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h4>
+              <figure class="download-item--links">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download</a></span>
+                {{ end }}
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article>
+          <hr>
+          <article class="nats--downloads">
+            <h3>Community Clients</h3>
+            {{ range .Releases }}
+            {{ if and ( eq .type "nats-client" ) ( eq .supported false ) }}
+            <section class="download--item">
+              <h4><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h4>
+              <figure class="download-item--links">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download</a></span>
+                {{ end }}
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article>
+        </div>
+
+        <div class="col-md-6">
+          <h2>NATS Streaming</h2>
+          <article class="nats--downloads">
+            <h3>Server</h3>
+            {{ range .Releases }}
+            {{ if eq .type "streaming-server" }}
+            <section class="download--item">
+              <h4><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h4>
+              <figure class="download-item--links">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download</a></span>
+                {{ end }}
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article>
+          <hr>
+          <article class="nats--downloads">
+            <h3>Apcera Supported Clients</h3>
+            {{ range .Releases }}
+            {{ if and ( eq .type "streaming-client" ) ( .supported ) }}
+            <section class="download--item">
+              <h4><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h4>
+              <figure class="download-item--links">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download</a></span>
+                {{ end }}
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article>
+          <!-- <hr>
+          <article class="nats--downloads">
+            <h3>Community Clients</h3>
+            {{ range .Releases }}
+            {{ if and ( eq .type "streaming-client" ) ( eq .supported false ) }}
+            <section class="download--item">
+              <h4><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h4>
+              <figure class="download-item--links">
+                {{ range first 1 .github }}
+                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
+                <span><a href="{{ .link }}/releases/latest" target="_blank">Download</a></span>
+                {{ end }}
+              </figure>
+            </section>
+            {{ end }}
+            {{ end }}
+          </article> -->
+        </div>
+
       </div>
 
-      <div class="download-server-con col-md-12">
-          <article class="nats--downloads">
-            <h2>Streaming</h2>
-            {{ range .Releases }}
-            {{ if eq .type "streaming" }}
-            <section class="download--item">
-              <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
-              <figure class="download-item--links">
-                {{ range first 1 .github }}
-                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
-                <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
-                {{ end }}
-              </figure>
-            </section>
-            {{ end }}
-            {{ end }}
-          </article>
-      </div>
 
-      <div class="download-clients-con col-md-12">
-          <article class="nats--downloads">
-            <h2>Apcera Supported Clients</h2>
-            {{ range .Releases }}
-            {{ if and ( ne .name "NATS Server" ) ( .supported ) }}
-            <section class="download--item">
-              <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
-              <figure class="download-item--links">
-                {{ range first 1 .github }}
-                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
-                <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
-                {{ end }}
-              </figure>
-            </section>
-            {{ end }}
-            {{ end }}
-          </article>
-      </div>
 
-      <div class="download-clients-con col-md-12">
-          <article class="nats--downloads">
-            <h2>Community Clients</h2>
-            {{ range .Releases }}
-            {{ if and ( ne .name "NATS Server" ) ( eq .supported false ) }}
-            <section class="download--item">
-              <h3><a href="/download/{{ range first 1 .github }}{{ .user | urlize  }}/{{ .repo | urlize }}{{ end }}">{{ .name }}</a></h3>
-              <figure class="download-item--links">
-                {{ range first 1 .github }}
-                <span><a href="{{ .link }}" target="_blank">View on Github</a></span>
-                <span><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></span>
-                {{ end }}
-              </figure>
-            </section>
-            {{ end }}
-            {{ end }}
-          </article>
-      </div>
       {{ end }}
 
       {{ else }}
@@ -102,45 +141,45 @@
         {{ end }}
         {{ if eq ($.Scratch.Get "pageRelUrl") ( print "/download/" ($.Scratch.Get "githubUser") "/" ($.Scratch.Get "githubRepo") "/" ) }}
           <h1 class="download-details--headline">{{ .name }}</h1>
-          <div class="download-details--wrapper">
-          <div class="download--details">
-            {{ if .supported }}<p class="supported">Supported by <img src="/img/logo-sm.png" alt="Apcera" /></p>{{ end }}
-            <ul class="list-unstyled">
+
+          <div class="row">
+            <div class="col-sm-4">
+              {{ if .supported }}<p class="supported">Supported by <img src="/img/logo-sm.png" alt="Apcera" /></p>{{ end }}
+              <ul class="list-unstyled">
+                {{ range first 1 .github }}
+                <li><a href="{{ .link }}" target="_blank">View on Github</a></li>
+                <li><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></li>
+                {{ end }}
+                {{ range .links }}
+                <li><a href="{{ .url }}">{{ .name }}</a></li>
+                {{ end }}
+              </ul>
+            </div>
+            <div class="col-sm-8">
+              <h6>Language: {{ .language }}</h6>
               {{ range first 1 .github }}
-              <li><a href="{{ .link }}" target="_blank">View on Github</a></li>
-              <li><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></li>
+              <!-- Watch -->
+              <a class="github-button" href="{{ .link }}" data-icon="octicon-eye" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/watchers" data-count-api="/repos/{{.user}}/{{.repo}}#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch {{.user}}/{{.repo}} on GitHub">Watch</a>
+              <!-- Star -->
+              <a class="github-button" href="{{ .link }}" data-icon="octicon-star" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/stargazers" data-count-api="/repos/{{.user}}/{{.repo}}#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star {{.user}}/{{.repo}} on GitHub">Star</a>
+              <!-- Fork -->
+              <a class="github-button" href="{{ .link }}" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/network" data-count-api="/repos/{{.user}}/{{.repo}}#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork {{.user}}/{{.repo}} on GitHub">Fork</a>
               {{ end }}
-              {{ range .links }}
-              <li><a href="{{ .url }}">{{ .name }}</a></li>
+
+              {{ if .release_notes }}
+              <h4>Release Notes:</h4>
+              {{ .release_notes | safeHTML }}
+              {{ else }}
+              <p>No release notes.</p>
               {{ end }}
-            </ul>
-          </div>
-          <div class="download--github">
-            <h6>Language: {{ .language }}</h6>
-            {{ range first 1 .github }}
-            <!-- Watch -->
-            <a class="github-button" href="{{ .link }}" data-icon="octicon-eye" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/watchers" data-count-api="/repos/{{.user}}/{{.repo}}#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch {{.user}}/{{.repo}} on GitHub">Watch</a>
-            <!-- Star -->
-            <a class="github-button" href="{{ .link }}" data-icon="octicon-star" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/stargazers" data-count-api="/repos/{{.user}}/{{.repo}}#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star {{.user}}/{{.repo}} on GitHub">Star</a>
-            <!-- Fork -->
-            <a class="github-button" href="{{ .link }}" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/network" data-count-api="/repos/{{.user}}/{{.repo}}#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork {{.user}}/{{.repo}} on GitHub">Fork</a>
-            {{ end }}
 
-            {{ if .release_notes }}
-            <h4>Release Notes:</h4>
-            {{ .release_notes | safeHTML }}
-            {{ else }}
-            <p>No release notes.</p>
-            {{ end }}
-
-            {{ range first 1 .author }}
-            {{ if .name }}
-            <h4>Author:</h4>
-            <p><a target="_blank" href="{{ .link }}">{{ .name }}</a></p>
-            {{ end }}
-            {{ end }}
-
-          </div>
+              {{ range first 1 .author }}
+              {{ if .name }}
+              <h4>Author:</h4>
+              <p><a target="_blank" href="{{ .link }}">{{ .name }}</a></p>
+              {{ end }}
+              {{ end }}
+            </div>
           </div>
         {{ end }}
 
