Finished homepage tweaks for new copy

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -405,7 +405,7 @@ html#home-html {
 
   @media (max-width: @screen-xs-max) {
     .background-con {
-      background: url(/img/home-background-sm.jpg) repeat-x center 200px;
+      background: url(/img/home-background-sm.jpg) repeat-x center 285px;
     }
     .homepage-brand {
       width: 100%;
@@ -416,8 +416,13 @@ html#home-html {
       h1 {
         font-size: 28px;
       }
-      .lead {
+      h2 {
         font-size: 18px;
+        margin-top: 0px;
+        margin-bottom: 20px;
+      }
+      .lead {
+        font-size: 14px;
         margin-bottom: 20px;
       }
       .extra-info {
