--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7075,7 +7075,7 @@ html#home-html {
 }
 @media (max-width: 767px) {
   #home-page .background-con {
-    background: url(/img/home-background-sm.jpg) repeat-x center 200px;
+    background: url(/img/home-background-sm.jpg) repeat-x center 285px;
   }
   #home-page .homepage-brand {
     width: 100%;
@@ -7087,8 +7087,13 @@ html#home-html {
   #home-page #homepage-content h1 {
     font-size: 28px;
   }
-  #home-page #homepage-content .lead {
+  #home-page #homepage-content h2 {
     font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+  }
+  #home-page #homepage-content .lead {
+    font-size: 14px;
     margin-bottom: 20px;
   }
   #home-page #homepage-content .extra-info {
