Added docker plus nats blog post

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -5,6 +5,9 @@
 // Icomoon Icons
 @import "util/icons.less";
 
+// Code highlight
+@import "util/code-highlight.less";
+
 
 // Primary Colours
 @nats-brand-background:                     #00011f;
@@ -99,6 +102,19 @@
 // Code
 @code-color:                                @nats-brand-gray-dark;
 @code-bg:                                   #eee;
+@pre-bg:                                    #333;
+@pre-color:                                 #d0d0d0;
+// @code-color:                  #c7254e;
+// @code-bg:                     #f9f2f4;
+//
+// @kbd-color:                   #fff;
+// @kbd-bg:                      #333;
+//
+// @pre-bg:                      #f5f5f5;
+// @pre-color:                   @gray-dark;
+// @pre-border-color:            #ccc;
+// @pre-scrollable-max-height:   340px;
+
 
 // Labels
 @label-default-bg:                          #ccc;
