Added GE to bottom of homepage

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -405,13 +405,27 @@ html#home-html {
         box-shadow: 0px 0px 15px 6px rgba(255,255,255,0.65);
       };
     }
-    #bottom-logo-container {
+    .bottom-logo-container {
       text-align: center;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-wrap: wrap;
-
+      .ge {
+        svg {
+          width: 40%;
+        }
+      }
+      .htc {
+        svg {
+          width: 70%;
+        }
+      }
+      .pivotal {
+        svg {
+          width: 90%;
+        }
+      }
       .col-xs-6 {
         align-self: flex-end;
         margin-bottom: 30px;
